[tool.poetry]
name = "pymdown-toc-ext"
version = "1.2.0"
description = "An extension for Python-Markdown which extends the built-in toc extension with additional capabilities to customize the generated table of contents."
license = "MIT"
authors = ["Benjamin Dobell <benjamin.dobell@glassechidna.com.au>"]
homepage = "https://github.com/Benjamin-Dobell/pymdown-toc-ext"
repository = "https://github.com/Benjamin-Dobell/pymdown-toc-ext.git"
keywords=[
    "markdown",
    "extensions",
    "pymdown",
    "toc"
]
classifiers=[
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML"
]

[tool.poetry.dependencies]
python = "^3.6"
Markdown = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.plugins."markdown.extensions"]
toc_ext = "pymdown_toc_ext:TocExtExtension"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
